2011-03-15  Robert Hogan  <robert@webkit.org>

        Reviewed by Adam Barth.

        Document the qmakearg argument, and hint how to build webkit2 on Qt
        https://bugs.webkit.org/show_bug.cgi?id=56326

        * Scripts/build-webkit: add --qmakearg to build-webkit --help

2011-03-15  Adam Roben  <aroben@apple.com>

        Make Windows 7 Release (Tests) a core builder

        We can probably make Windows XP Debug (Tests) a core builder, too, but we should probably
        give it a few more days of greenness first.

        Fixes <http://webkit.org/b/55665> Windows 7 Release (Tests) should be a core builder

        Reviewed by Sam Weinig.

        * Scripts/webkitpy/common/net/buildbot/buildbot.py:
        (BuildBot): Added a regexp to match Windows 7 Release (Tests).

        * Scripts/webkitpy/common/net/buildbot/buildbot_unittest.py:
        (BuildBotTest): Updated the list of builders to match the current list on build.webkit.org.
        Updated the core regexps to match the buildbot module. Updated the expected results to match
        the current set of core builders.

2011-03-14  Adam Roben  <aroben@apple.com>

        Add forgotten file from r81116

        * TestWebKitAPI/Configurations/TestWebKitAPICFNetwork.vsprops: Added.

2011-03-14  Sam Weinig  <sam@webkit.org>

        Reviewed by Adam Roben.

        about:blank fake responses don't get serialized when sent the UIProcess
        <rdar://problem/9108119>
        https://bugs.webkit.org/show_bug.cgi?id=56357

        * TestWebKitAPI/Tests/WebKit2/AboutBlankLoad.cpp: Added.
        (TestWebKitAPI::decidePolicyForResponse):
        (TestWebKitAPI::TEST):
        Add test that loads of about:blank have a response with a MIMEType of text/html.

        * TestWebKitAPI/PlatformUtilities.h:
        * TestWebKitAPI/mac/PlatformUtilitiesMac.mm:
        (TestWebKitAPI::Util::MIMETypeForWKURLResponse):
        * TestWebKitAPI/win/PlatformUtilitiesWin.cpp: