@@ -1,3 +1,13 @@
+2011-03-15  Alejandro G. Castro  <alex@igalia.com>
+
+        Reviewed by Martin Robinson.
+
+        [GTK] Fix compilation warning after r80892
+        https://bugs.webkit.org/show_bug.cgi?id=56302
+
+        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
+        (LayoutTestController::originsWithLocalStorage):
+
 2011-03-15  Robert Hogan  <robert@webkit.org>
 
         Reviewed by Adam Barth.
